@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Support disable for loop escapes.
 
+**** Use 'vluint64_t' for SystemC instead of (same sized) 'uint64' for MSVC++.
+
 * Verilator 3.813 2011/06/28
 
 ***  Support bit vectors > 64 bits wide in DPI import and exports.
